--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="app" class="container">
+    <div id="app" class="container mb-100">
         <div class="title">
             <h1>タイピングゲーム</h1>
             <div class="marker"></div>
@@ -23,9 +23,15 @@
             <div class="typeFormWrapper mb-20">
                 <input v-model="typeBox" type="text" id="typeForm" class="typeForm">
             </div>
+            <!-- <div class="typeFormWrapper mb-20">
+                <input v-model="typeBox" type="text" id="typeForm" class="typeForm">
+            </div>
+            <div class="typeFormWrapper mb-20">
+                <input v-model="typeBox" type="text" id="typeForm" class="typeForm">
+            </div>
             <div class="gaugeWrapper mb-20">
                 <div v-bind:style="styleObject" class="gauge"></div>
-            </div>
+            </div> -->
         </div>
 
         <div>{{current_question_counts}}/{{question_counts}}</div>
@@ -52,6 +58,11 @@
                 typeBox: "",
                 current_question_counts: 0,
                 question_counts: 0,
+                words: [
+                    { id: 1, word: "sample1", mean: ["aaa"] },
+                    { id: 2, word: "sample2", mean: ["aaa", "bbb"] },
+                    { id: 3, word: "sample3", mean: ["aaa", "bbb", "ccc"] },
+                ]
             },
             computed: {
                 styleObject: function () {
